creditas-sf/force-app/main/default/objects/Deal__c/Deal__c.object-meta.xml
<CustomObject>
    <description>Objeto para registrar Negociações (Deals) realizadas com os Contatos (Leads) no processo de Auto.</description>
    <label>Deal</label>
    <nameField>
        <label>Nome do Deal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>