creditas-sf/force-app/main/default/objects/Deal__c/fields/AreaOfPersonWhoReferred__c.field-meta.xml
<CustomField>
    <fullName>AreaOfPersonWhoReferred__c</fullName>
    <description>Área da Pessoa que Indicou o Deal</description>
    <label>Área da pessoa que indicou</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RM E2E</fullName>
            </value>
            <value>
                <fullName>RM Cross At Work</fullName>
            </value>
            <value>
                <fullName>RM MVP troca de carro</fullName>
            </value>
            <value>
                <fullName>RM Campanha mkt</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>Retenção</fullName>
            </value>
            <value>
                <fullName>Minuto Seguros</fullName>
            </value>
            <value>
                <fullName>Resolva</fullName>
            </value>
            <value>
                <fullName>CX ops</fullName>
            </value>
            <value>
                <fullName>Negociação</fullName>
            </value>
            <value>
                <fullName>Entrega Amigável</fullName>
            </value>
            <value>
                <fullName>Tripulante</fullName>
            </value>
            <value>
                <fullName>At Work</fullName>
            </value>
            <value>
                <fullName>Auto Refin</fullName>
            </value>
            <value>
                <fullName>Creditas Home</fullName>
            </value>
            <value>
                <fullName>Home Refin</fullName>
            </value>
            <value>
                <fullName>Creditas Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>