creditas-sf/force-app/main/default/objects/Deal__c/fields/BestTimeToContact__c.field-meta.xml
<CustomField>
    <fullName>BestTimeToContact__c</fullName>
    <description>Melhor horário para entrar em contato com o Deal</description>
    <label>Melhor horário para contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manhã [das 8hs às 12hs]</fullName>
            </value>
            <value>
                <fullName>Tarde [das 12hs às 17hs]</fullName>
            </value>
            <value>
                <fullName>Noite [após 18hs]</fullName>
            </value>
            <value>
                <fullName>Qualquer horário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>