creditas-sf/force-app/main/default/objects/Deal__c/fields/DealValue__c.field-meta.xml
<CustomField>
    <fullName>DealValue__c</fullName>
    <description>Valor da Negociação</description>
    <label>Valor da negociação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>