creditas-sf/force-app/main/default/objects/Deal__c/fields/DiscontinuedReason__c.field-meta.xml
<CustomField>
    <fullName>DiscontinuedReason__c</fullName>
    <description>Campo para preencher o motivo pelo qual o negócio (Deal) foi descontinuado.</description>
    <label>Motivo descontinuado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Teste/Duplicado</fullName>
            </value>
            <value>
                <fullName>Cliente desistiu após proposta final - troca express</fullName>
            </value>
            <value>
                <fullName>Cliente desistiu após proposta final - venda</fullName>
            </value>
            <value>
                <fullName>Cliente desistiu pelo custo do guincho</fullName>
            </value>
            <value>
                <fullName>Cliente não quis aguardar prazo de preparação do carro</fullName>
            </value>
            <value>
                <fullName>Cliente procurando outro produto Creditas - financiamento para comprar veículo externo</fullName>
            </value>
            <value>
                <fullName>Cliente procurando outro produto Creditas</fullName>
            </value>
            <value>
                <fullName>Condições de financiamento - não tem valor de entrada</fullName>
            </value>
            <value>
                <fullName>Condições de financiamento - parcela alta</fullName>
            </value>
            <value>
                <fullName>Condições de financiamento - taxa alta</fullName>
            </value>
            <value>
                <fullName>Contato sem Sucesso</fullName>
            </value>
            <value>
                <fullName>Dados inválidos</fullName>
            </value>
            <value>
                <fullName>Fechou com Concorrente - melhor condição de financiamento</fullName>
            </value>
            <value>
                <fullName>Fechou com Concorrente - melhor condição do veículo</fullName>
            </value>
            <value>
                <fullName>Fechou com Concorrente - preço menor</fullName>
            </value>
            <value>
                <fullName>Fora da política - reprovado em crédito</fullName>
            </value>
            <value>
                <fullName>Fora da política - reprovado em formalização</fullName>
            </value>
            <value>
                <fullName>Fora da política - reprovado na PQ</fullName>
            </value>
            <value>
                <fullName>Fora da política de aquisição</fullName>
            </value>
            <value>
                <fullName>Fora da região de atuação</fullName>
            </value>
            <value>
                <fullName>Carro de interesse reservado/vendido</fullName>
            </value>
            <value>
                <fullName>Não temos o carro de interesse</fullName>
            </value>
            <value>
                <fullName>Não gostou da estética do carro</fullName>
            </value>
            <value>
                <fullName>Parou de responder - após opção de carros</fullName>
            </value>
            <value>
                <fullName>Parou de responder - após os valores dos veículos</fullName>
            </value>
            <value>
                <fullName>Parou de responder - após simulação de financiamento</fullName>
            </value>
            <value>
                <fullName>Retornar mais pra frente</fullName>
            </value>
            <value>
                <fullName>Lead vinculado a outro consultor</fullName>
            </value>
            <value>
                <fullName>Card vinculado a outro</fullName>
            </value>
            <value>
                <fullName>Não carteirizado em tempo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>