creditas-sf/force-app/main/default/objects/Deal__c/fields/EmailOfPersonWhoReferred__c.field-meta.xml
<CustomField>
    <fullName>EmailOfPersonWhoReferred__c</fullName>
    <description>Email da Pessoa que Indicou o Deal</description>
    <label>Email da pessoa que indicou</label>
    <type>Email</type>
</CustomField>