creditas-sf/force-app/main/default/objects/Deal__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>ID Externo da Negociação</description>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>