creditas-sf/force-app/main/default/objects/Deal__c/fields/InterestedInCarInsurance__c.field-meta.xml
<CustomField>
    <fullName>InterestedInCarInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar se Cliente (Lead) tem interesse em fazer seguro do carro.</description>
    <label>Tenho interesse em fazer seguro do carro</label>
    <type>Checkbox</type>
</CustomField>