creditas-sf/force-app/main/default/objects/Deal__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead que está fazendo a negociação.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Negociacoes</relationshipName>
    <type>Lookup</type>
</CustomField>