creditas-sf/force-app/main/default/objects/Deal__c/fields/LeadOrigin__c.field-meta.xml
<CustomField>
    <fullName>LeadOrigin__c</fullName>
    <description>Origem do Lead (CREDITAS_AUTO, Webmotors, etc.)</description>
    <label>Origem do Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CREDITAS_AUTO</fullName>
            </value>
            <value>
                <fullName>Webmotors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>