creditas-sf/force-app/main/default/objects/Deal__c/fields/PartnerCompany__c.field-meta.xml
<CustomField>
    <fullName>PartnerCompany__c</fullName>
    <description>Empresa Parceira</description>
    <label>Empresa parceira</label>
    <length>100</length>
    <type>Text</type>
</CustomField>