creditas-sf/force-app/main/default/objects/Deal__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>Fases da Negociação com o Cliente (Lead)</description>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novos clientes</fullName>
                <default>true</default>
                <label>Novos clientes</label>
            </value>
            <value>
                <fullName>Carteirizar</fullName>
            </value>
            <value>
                <fullName>Em negociação</fullName>
            </value>
            <value>
                <fullName>Visita</fullName>
            </value>
            <value>
                <fullName>Formalizar</fullName>
            </value>
            <value>
                <fullName>Carro vendido</fullName>
            </value>
            <value>
                <fullName>Negócio descontinuado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>