creditas-sf/force-app/main/default/objects/Deal__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Prioridade (Preenchido por regra de automação no sistema CRM)</description>
    <label>Prioridade</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>