creditas-sf/force-app/main/default/objects/Deal__c/fields/SuccessfulContact__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulContact__c</fullName>
    <description>Identifica se a tentativa de contato com o Deal foi bem-sucedida / concluída ou se o Deal não foi localizado na tentativa de contato.</description>
    <inlineHelpText>Identifica se a tentativa de contato com o Deal foi bem-sucedida / concluída ou se o Deal não foi localizado na tentativa de contato.</inlineHelpText>
    <label>Contato com sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoConfirmation</valueSetName>
    </valueSet>
</CustomField>