creditas-sf/force-app/main/default/objects/Deal__c/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <description>UTM Campanha (search-institucional, [creditas-auto][search][institucional][cliques])</description>
    <label>UTM campanha</label>
    <length>100</length>
    <type>Text</type>
</CustomField>