creditas-sf/force-app/main/default/objects/Deal__c/fields/UTM_Media__c.field-meta.xml
<CustomField>
    <fullName>UTM_Media__c</fullName>
    <description>UTM Mídia (ex,: cpc)</description>
    <label>UTM mídia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>