creditas-sf/force-app/main/default/objects/Deal__c/fields/UTM_source__c.field-meta.xml
<CustomField>
    <fullName>UTM_source__c</fullName>
    <description>UTM Fonte (ex.: google)</description>
    <label>UTM fonte</label>
    <length>100</length>
    <type>Text</type>
</CustomField>