creditas-sf/force-app/main/default/objects/Deal__c/fields/WantToUseCreditasFinancing__c.field-meta.xml
<CustomField>
    <fullName>WantToUseCreditasFinancing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que sinaliza se o Cliente (Lead) quer usar o Financiamento da Creditas.</description>
    <label>Quero usar o financiamento Creditas</label>
    <type>Checkbox</type>
</CustomField>