creditas-sf/force-app/main/default/objects/Deal__c/recordTypes/AutoSales.recordType-meta.xml
<RecordType>
    <fullName>AutoSales</fullName>
    <active>true</active>
    <description>Tipo de Registro da Negociação: Auto - Vendas</description>
    <label>Auto - Vendas</label>
</RecordType>