creditas-sf/force-app/main/default/objects/Deal__c/validationRules/Deal_ChangeNameNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Deal_ChangeNameNotAllowed</fullName>
    <active>true</active>
    <description>Regra para prevenir edições no campo Nome</description>
    <errorConditionFormula>AND (
				 $Profile.Name  &lt;&gt; &quot;Administrador do sistema&quot;,
				 $Profile.Name  &lt;&gt; &quot;System Administrator&quot;,
				 ISCHANGED(Name)
				)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Não é permitido fazer alterações no Nome do Deal</errorMessage>
</ValidationRule>