creditas-sf/force-app/main/default/objects/Deal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SuccessfulContact__c</columns>
    <columns>DealValue__c</columns>
    <columns>Lead__c</columns>
    <columns>Phase__c</columns>
    <columns>DiscontinuedReason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>