creditas-sf/force-app/main/default/objects/Deal__c/listViews/CreditasAutoVendas_Deal.listView-meta.xml
<ListView>
    <fullName>CreditasAutoVendas_Deal</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Deal__c.AutoSales</value>
    </filters>
    <label>Creditas Auto - Vendas</label>
    <queue>CreditasAutoVendas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>